Implement authorization filters for spark, struts and ajax routes